--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 </div>
 
                 <div class="navbar-center ">
-                    <a class="btn btn-ghost normal-case text-xl font-extrabold"><img class="w-8" src="./image/logo.png" alt="">Fruit
+                    <a class="btn btn-ghost normal-case text-xl font-extrabold"><img class="w-8" src="./image/logo.png"
+                            alt="">Fruit
                         Brust</a>
                 </div>
 
@@ -233,7 +234,7 @@
                             <hr>
                         </h2>
                         <hr>
-                        <p>Apple</p>
+                        <p class="font-bold">Apple</p>
                         <div class="rating">
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-400" checked />
@@ -243,10 +244,52 @@
                         </div>
 
                         <div class="card-actions">
-                            <a class="text-red-400" href="">Details</a>
+                            <!-- The button to open modal -->
+                            <a class="text-red-400" href="#my_modal_1" class="">Details</a>
+                            <!--  Modal Part -->
+                            <div class="modal" id="my_modal_1">
+                                <div class="modal-box flex flex-col justify-center items-center">
+                                    <img src="./image/fruit6.png" alt="">
+                                    <h3 class="font-bold text-lg mt-4">Apple</h3>
+                                    <p class="py-4">Professional employees are there for you to pick the most amazing
+                                        and fresh fruits.</p>
+
+                                    <div class="rating rating-lg rating-half">
+                                        <input type="radio" name="rating-10" class="rating-hidden" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" checked />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                    </div>
+                                    <div class="modal-action">
+                                        <button
+                                            class=" px-4 py-3 text-red-500 btn-outline btn-error btn rounded-xl ">Close</button>
+                                        <button class="bg-red-400 px-4 py-3 text-white rounded-xl ">Buy Now</button>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
+
                     </div>
                 </div>
+
                 <div class="card  bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
                         <img src="./image/fruit7.png" alt="Shoes" class="rounded-xl" />
@@ -256,7 +299,7 @@
                             <hr>
                         </h2>
                         <hr>
-                        <p>Orange</p>
+                        <p class="font-bold">Orange</p>
                         <div class="rating">
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-400" checked />
@@ -266,10 +309,51 @@
                         </div>
 
                         <div class="card-actions">
-                            <a class="text-red-400" href="">Details</a>
+                            <!-- The button to open modal -->
+                            <a class="text-red-400" href="#my_modal_2" class="">Details</a>
+                            <!--  Modal Part -->
+                            <div class="modal" id="my_modal_2">
+                                <div class="modal-box flex flex-col justify-center items-center">
+                                    <img src="./image/fruit7.png" alt="">
+                                    <h3 class="font-bold text-lg mt-4">Orange </h3>
+                                    <p class="py-4">Professional employees are there for you to pick the most amazing
+                                        and fresh fruits.</p>
+
+                                    <div class="rating rating-lg rating-half">
+                                        <input type="radio" name="rating-10" class="rating-hidden" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" checked />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                    </div>
+                                    <div class="modal-action">
+                                        <button
+                                            class=" px-4 py-3 text-red-500 btn-outline btn-error btn rounded-xl ">Close</button>
+                                        <button class="bg-red-400 px-4 py-3 text-white rounded-xl ">Buy Now</button>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
+
                 <div class="card  bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
                         <img src="./image/fruit8.png" alt="Shoes" class="rounded-xl" />
@@ -279,7 +363,7 @@
                             <hr>
                         </h2>
 
-                        <p>Red Dragon</p>
+                        <p class="font-bold">Red Dragon</p>
                         <div class="rating">
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-400" checked />
@@ -288,10 +372,51 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-400" />
                         </div>
                         <div class="card-actions">
-                            <a class="text-red-400" href="">Details</a>
+                            <!-- The button to open modal -->
+                            <a class="text-red-400" href="#my_modal_3" class="">Details</a>
+                            <!--  Modal Part -->
+                            <div class="modal" id="my_modal_3">
+                                <div class="modal-box flex flex-col justify-center items-center">
+                                    <img src="./image/fruit8.png" alt="">
+                                    <h3 class="font-bold text-lg mt-4">Red Dragon</h3>
+                                    <p class="py-4">Professional employees are there for you to pick the most amazing
+                                        and fresh fruits.</p>
+
+                                    <div class="rating rating-lg rating-half">
+                                        <input type="radio" name="rating-10" class="rating-hidden" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" checked />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                    </div>
+                                    <div class="modal-action">
+                                        <button
+                                            class=" px-4 py-3 text-red-500 btn-outline btn-error btn rounded-xl ">Close</button>
+                                        <button class="bg-red-400 px-4 py-3 text-white rounded-xl ">Buy Now</button>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
+
                 <div class="card  bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
                         <img src="./image/fruit9.png" alt="Shoes" class="rounded-xl" />
@@ -301,7 +426,7 @@
                             <hr>
                         </h2>
 
-                        <p>Banana</p>
+                        <p class="font-bold">Banana</p>
                         <div class="rating">
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-400" />
@@ -310,10 +435,51 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-400" />
                         </div>
                         <div class="card-actions">
-                            <a class="text-red-400" href="">Details</a>
+                            <!-- The button to open modal -->
+                            <a class="text-red-400" href="#my_modal_4" class="">Details</a>
+                            <!--  Modal Part -->
+                            <div class="modal" id="my_modal_4">
+                                <div class="modal-box flex flex-col justify-center items-center">
+                                    <img src="./image/fruit9.png" alt="">
+                                    <h3 class="font-bold text-lg mt-4">Banana</h3>
+                                    <p class="py-4">Professional employees are there for you to pick the most amazing
+                                        and fresh fruits.</p>
+
+                                    <div class="rating rating-lg rating-half">
+                                        <input type="radio" name="rating-10" class="rating-hidden" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" checked />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-1" />
+                                        <input type="radio" name="rating-10"
+                                            class="bg-red-400 mask mask-star-2 mask-half-2" />
+                                    </div>
+                                    <div class="modal-action">
+                                        <button
+                                            class=" px-4 py-3 text-red-500 btn-outline btn-error btn rounded-xl ">Close</button>
+                                        <button class="bg-red-400 px-4 py-3 text-white rounded-xl ">Buy Now</button>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
+
             </div>
 
             <div class="text-center mt-5">
@@ -507,9 +673,10 @@
     </main>
     <!-- footer  -->
     <footer class="footer footer-center p-10 bg-slate-900 text-base-content rounded text-white">
-        
+
         <div class=" ">
-            <a class="btn btn-ghost normal-case text-xl font-extrabold"><img class="w-8" src="./image/logo.png" alt="">Fruit Brust</a>
+            <a class="btn btn-ghost normal-case text-xl font-extrabold"><img class="w-8" src="./image/logo.png"
+                    alt="">Fruit Brust</a>
         </div>
         <nav class="grid grid-flow-col gap-4">
             <a class="link link-hover">About us</a>
